hphp/hack/test/typecheck/constraint_array_index/after/lambda_called_on_bad_shape.php.exp
ERROR: File "lambda_called_on_bad_shape.php", line 3, characters 19-21:
This shape doesn't have a field `a` (Typing[4108])
  File "lambda_called_on_bad_shape.php", line 3, characters 19-21:
  The shape is defined here
